--- a/css/typogrophy.css
+++ b/css/typogrophy.css
@@ -25,13 +25,6 @@
 	text-shadow: 0 0 30px #ff6699, 0 0 30px #ff6699, 0 0 30px #ff6699, 0 0 30px #ff6699;
 }
 
-.ie #site-title {
-	width: 500px;
-	background-color: #f08bb9;
-	border: 2px solid #ff6699;
-	text-align: center;
-}
-
 h2 {
 	padding: 20px;
 	font-size: 35px;
